--- a/ioteca_web/app/views/pages/dashboard.wall.html
+++ b/ioteca_web/app/views/pages/dashboard.wall.html
@@ -72,14 +72,15 @@
 
                             </md-card-icon-actions>
 
-                        </md-card-actions>
+                        </md-card-actions><br>
+
  <section layout="row" layout-sm="column" layout-align="center center" layout-wrap class="e">
                         <md-button class="md-raised md-primary style1" ng-click="save()"><ng-md-icon icon="search" class="style4"style4 aria-label="title"></ng-md-icon> Buscar</md-button> </left>
                           <md-button class="md-raised md-primary  style2" ng-click="save()"> <ng-md-icon icon="add" class="style4"style4 aria-label="title"></ng-md-icon> Agregar Paciente</md-button>
-                           </section>
+                           </section><br>
                          <table table-responsive>
-                        
-                        <md-progress-linear layout-fill md-mode="indeterminate" ng-hide="!isLoading"></md-progress-linear>
+                        <md-divider></md-divider>
+                     
                         <thead md-on-reorder="onReorder">
                             <tr>
                                 <th>#</th>
