--- a/ioteca_web/ioteca_web_apps/inicio_web/views/categorias/index.html
+++ b/ioteca_web/ioteca_web_apps/inicio_web/views/categorias/index.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <md-content class="md-padding" layout-xs="column" layout="row">
         <div flex-xs flex-gt-xs="100" layout="column">
-            <md-card ng-controllerx="DashboardSaveCtrl">
+            <md-card ng-controllerx="CategoriaCtrl">
                 <md-card-header>
                     <md-card-avatar>
                         <img class="md-user-avatar style5" src="media/img/list/logo.png" />
